# ROS-docker-container

./: Dockerfile  README.md  bashrc  docker-compose.yml  docker-compose_x11.yml
.devcontainer/: devcontainer.json
dependencies_ws/src/cs4750_dependencies/: README.md
dependencies_ws/src/cs4750_dependencies/mushr_sim/: CMakeLists.txt  README.md  package.xml  setup.py
dependencies_ws/src/cs4750_dependencies/mushr_sim/.github/: PULL_REQUEST_TEMPLATE.md
dependencies_ws/src/cs4750_dependencies/mushr_sim/config/: vesc.yaml
dependencies_ws/src/cs4750_dependencies/mushr_sim/config/racecar-mit/: sensors.yaml
dependencies_ws/src/cs4750_dependencies/mushr_sim/config/racecar-uw-nano/: sensors.yaml
dependencies_ws/src/cs4750_dependencies/mushr_sim/config/racecar-uw-tx2/: sensors.yaml
dependencies_ws/src/cs4750_dependencies/mushr_sim/docker/: .env  Dockerfile  docker-compose.yml
dependencies_ws/src/cs4750_dependencies/mushr_sim/launch/: keyboard_teleop.launch.xml  map_server.launch  multi_teleop.launch  sensors.launch.xml  single_car.launch  single_car_sim.launch  teleop.launch  vesc.launch.xml
dependencies_ws/src/cs4750_dependencies/mushr_sim/scripts/: clicked_point_to_reposition  fake_vesc_driver_node  keyboard_teleop  mushr_sim
dependencies_ws/src/cs4750_dependencies/mushr_sim/src/mushr_sim/: fake_urg.py  fake_vesc_driver.py  keyboard_teleop.py  mushr_sim.py  utils.py
dependencies_ws/src/cs4750_dependencies/mushr_sim/srv/: CarPose.srv
dependencies_ws/src/cs4750_dependencies/ydlidar/: README.md
dependencies_ws/src/cs4750_dependencies/ydlidar/launch/: lidar.launch
dependencies_ws/src/cs4750_dependencies/ydlidar/src/: ydlidar_node.cpp
dependencies_ws/src/cs4750_dependencies/ydlidar/startup/: initenv.sh
homework_ws/src/cs4750/: CMakeLists.txt  package.xml  setup.py
homework_ws/src/cs4750/config/: default.rviz  env.sh
homework_ws/src/cs4750/env-hooks/: cs4750.bash.em  cs4750.zsh.em
homework_ws/src/cs4750/launch/: teleop.launch
homework_ws/src/cs4750/maps/: cse2_2.pgm  cse2_2.yaml  cse_006.pgm  cse_006.yaml  maze_0.pgm  maze_0.yaml  problem-setup.pgm  problem-setup.yaml  shapes_world.pgm  shapes_world.yaml  shapes_world_small.pgm  shapes_world_small.yaml  slalom_world.yaml
homework_ws/src/cs4750/scripts/: cornell_tools_client
homework_ws/src/cs4750/scripts/available_client/: whichws
homework_ws/src/cs4750/src/cornell_tools/common/: modes.bash  modes.zsh  util.bash
homework_ws/src/cs4750/src/cs4750/: collector.py  frechet.py  utils.py
homework_ws/src/widowx250_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
homework_ws/src/widowx250_moveit_config/config/: environment.urdf.xacro  environment_simple.urdf.xacro  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  wx250s.srdf  wx250s.urdf.xacro
homework_ws/src/widowx250_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context_simple.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  widowx_env.launch  widowx_simple_env.launch  wx250s_moveit_controller_manager.launch.xml
interbotix_ros_manipulators/interbotix_ros_xsarms/install/: xsarm_remote_install.sh
interbotix_ros_manipulators/interbotix_ros_xsarms/install/amd64/: xsarm_amd64_install.sh
interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_descriptions/urdf/: wx250s.urdf.xacro
interbotix_ws/src/interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_sdk/scripts/: xs_sdk_sim
interbotix_ws/src/interbotix_ros_manipulators/interbotix_ros_xsarms/: README.md
range_libc/pywrapper/: RangeLibc.cpp
