<?xml version="1.0"?>
<package format="3">
  <name>mushr_sim</name>
  <version>1.0.0</version>
  <description>A simulator for the MuSHR car. Created by Patrick Lancaster</description>

  <maintainer email="schmittle@cs.washington.edu">schmittle</maintainer>
  <maintainer email="rockettm@cs.washington.edu">Matthew Rockett</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>ackermann_cmd_mux</exec_depend>
  <exec_depend>fake_localization</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-tk</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-tk</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>mushr_base</exec_depend>
  <exec_depend>mushr_description</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>vesc</exec_depend>
  <exec_depend>vesc_ackermann</exec_depend>
  <exec_depend>vesc_driver</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>

  <export>
  </export>
</package>
